--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,10 @@
     <dependencies>
 
         <!--Spring Data JPA-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!--Spring Web-->
         <dependency>
@@ -30,12 +30,24 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!--MySQL Connector-->
+        <!--Spring Security-->
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!--Spring Boot Devtools-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+
+        <!--MySQL Connector-->
+        <!--<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
-        </dependency>
+        </dependency>-->
 
         <!--Lombok Library-->
         <dependency>
