--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,11 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
-
         <!--Spring Data JPA-->
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>-->
+        </dependency>
 
         <!--Spring Web-->
         <dependency>
@@ -43,11 +42,11 @@
         </dependency>
 
         <!--MySQL Connector-->
-        <!--<dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
-        </dependency>-->
+        </dependency>
 
         <!--Lombok Library-->
         <dependency>
